--- a/prepros.cfg
+++ b/prepros.cfg
@@ -140,6 +140,17 @@
           "optimized": false,
           "height": 128,
           "width": 128
+        },
+        "aa5fd7cb": {
+          "id": "aa5fd7cb",
+          "path": "README.html",
+          "output": "README.html",
+          "name": "README.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
         }
       },
       "deploymentHistory": {},
