remove 'too many markers' status when there are no longer too many :D

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -140,6 +140,45 @@
           "optimized": false,
           "height": 128,
           "width": 128
+        },
+        "d300bc38": {
+          "id": "d300bc38",
+          "path": "fatal.png",
+          "output": "fatal.png",
+          "name": "fatal.png",
+          "category": "IMAGE",
+          "size": 2347,
+          "type": "png",
+          "initialSize": 2347,
+          "optimized": false,
+          "height": 128,
+          "width": 128
+        },
+        "e6a31bc8": {
+          "id": "e6a31bc8",
+          "path": "severe.png",
+          "output": "severe.png",
+          "name": "severe.png",
+          "category": "IMAGE",
+          "size": 2477,
+          "type": "png",
+          "initialSize": 2477,
+          "optimized": false,
+          "height": 128,
+          "width": 128
+        },
+        "37bf9ec5": {
+          "id": "37bf9ec5",
+          "path": "slight.png",
+          "output": "slight.png",
+          "name": "slight.png",
+          "category": "IMAGE",
+          "size": 2371,
+          "type": "png",
+          "initialSize": 2371,
+          "optimized": false,
+          "height": 128,
+          "width": 128
         }
       },
       "deploymentHistory": {},
